# lidar_odometry

./: CMakeLists.txt  package.xml
config/: params.yaml
docs/: architecture.md  design.md  improvement_proposals.md
include/lidar_odometry/: lidar_odometry_node.hpp
launch/: lidar_odometry.launch.py
src/: lidar_odometry_node.cpp  main.cpp  ndt_omp_instantiation.cpp
